tests/parse_print/issues/425/1/stderr.expected
Error:
    tests/parse_print/issues/425/1/425.essence:1:1:
unexpected letting
expecting find statement or given statement
    letting s be {:}
    ^